<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="title_activity_graph">GraphActivity</string>
    <string name="title_activity_control">ControlActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_quit">Quit</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Instruction Buttons -->
    <string name="btn_read">read</string>
    <string name="btn_write">write</string>
    <string name="btn_do">do</string>
    <string name="btn_get">get</string>
    <string name="btn_put">put</string>
    <string name="btn_if">if</string>
    <string name="btn_end_if">endif</string>
    <string name="btn_sleep">sleep</string>
    <string name="cb_graph"><u>Graph</u></string>
    <string name="question_mark">\?</string>

    <!-- GATT Services -->
    <string name="generic_access_profile">Generic Access Profile</string>
    <string name="generic_attribute_profile">Generic Attribute Profile</string>

    <!-- GATT Attribute Types -->
    <string name="primary_service">Primary Service</string>
    <string name="secondary_serivce">Secondary Service</string>
    <string name="include">Include</string>
    <string name="characteristic">Characteristic</string>

    <!-- GATT Characteristic Descriptors -->
    <string name="characteristic_extended_properties">Characteristic Extended Properties</string>
    <string name="characteristic_user_description">Characteristic User Description</string>
    <string name="client_characteristic_configuration">Client Characteristic Configuration</string>
    <string name="server_characteristic_configuration">Server Characteristic Configuration</string>
    <string name="characteristic_format">Characteristic Format</string>
    <string name="characteristic_aggregate_format">Characteristic Aggregate Format</string>

    <!-- GATT Characteristic Types -->
    <string name="device_name">Device Name</string>
    <string name="appearance">Appearance</string>
    <string name="peripheral_privacy_flag">Peripheral Privacy Flag</string>
    <string name="reconnection_address">Reconnection Address</string>
    <string name="peripheral_preferred_connection_parameters">Peripheral Preferred Connection Parameters</string>
    <string name="service_changed">Service Changed</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_toggle">Sample</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_requesting">Requesting</string>

    <string name="connection_enable_dialog_content">This application requires Internet connection to operate. Please enable Wifi connection!</string>
    <string name="dialog_title">Wifi Enable</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>
</resources>
